[REFACTOR] Replace instances of Stream.collect(..) into Stream.toList()